Improve todo service and API
