# .gen/api/openapi/todo/go/model_add_item_request.go
@@ -1,7 +1,7 @@
 /*
  * Todo API
  *
- * Manage TODOs
+ * The Todo API manages a list of todo items as described by the TodoMVC backend project: http://todobackend.com 
  *
  * API version: 1.0.0
  * Generated by: OpenAPI Generator (https://openapi-generator.tech)
@@ -9,7 +9,7 @@
 
 package api
 
-type CreateTodoRequest struct {
+type AddItemRequest struct {
 
 	Title string `json:"title"`
 
